appId: ${APP_ID}
name: Verify that isMaestro works
---
- launchApp
- runFlow: ./_wait_to_open_app.yaml

- assertVisible: "is_maestro:null"
- tapOn:
    id: "my_btn"
- assertVisible: "is_maestro:true"
